--- a/first_follow.html
+++ b/first_follow.html
@@ -12,12 +12,12 @@
 <th BGCOLOR = #858785><font size = '4' color = '#030303'> Follow Set </font></th>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltINICIAL&gt</td><td BGCOLOR = #F9F8F8>programa			</td>
+<td BGCOLOR = #D8D8D8>&ltA&gt</td><td BGCOLOR = #F9F8F8>programa			</td>
 <td BGCOLOR = #F9F8F8>$			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltPROG&gt</td><td BGCOLOR = #F9F8F8>programa			</td>
-<td BGCOLOR = #F9F8F8>a			</td>
+<td BGCOLOR = #F9F8F8>fim-de-arquivo			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltDECLS&gt</td><td BGCOLOR = #F9F8F8>lambda			variaveis			</td>
@@ -49,7 +49,7 @@
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltC-COMP&gt</td><td BGCOLOR = #F9F8F8>abrech			</td>
-<td BGCOLOR = #F9F8F8>a			enquanto			escreva			id			lambda			leia			se			senao			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fim-de-arquivo			id			lambda			leia			se			senao			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltLISTA-COMANDOS&gt</td><td BGCOLOR = #F9F8F8>enquanto			escreva			id			leia			se			</td>
