--- a/first_follow.html
+++ b/first_follow.html
@@ -20,7 +20,7 @@
 <td BGCOLOR = #F9F8F8>fim-de-arquivo			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltDECLS&gt</td><td BGCOLOR = #F9F8F8>lambda			variaveis			</td>
+<td BGCOLOR = #D8D8D8>&ltDECLS&gt</td><td BGCOLOR = #F9F8F8>&lambda;			variaveis			</td>
 <td BGCOLOR = #F9F8F8>abrech			</td>
 </tr>
 <tr>
@@ -28,19 +28,19 @@
 <td BGCOLOR = #F9F8F8>abrech			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltD&gt</td><td BGCOLOR = #F9F8F8>id			lambda			</td>
+<td BGCOLOR = #D8D8D8>&ltD&gt</td><td BGCOLOR = #F9F8F8>&lambda;			id			</td>
 <td BGCOLOR = #F9F8F8>abrech			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltDECL-TIPO&gt</td><td BGCOLOR = #F9F8F8>id			</td>
-<td BGCOLOR = #F9F8F8>id			lambda			</td>
+<td BGCOLOR = #F9F8F8>abrech			id			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltLIST-ID&gt</td><td BGCOLOR = #F9F8F8>id			</td>
 <td BGCOLOR = #F9F8F8>dpontos			fechapar			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltE&gt</td><td BGCOLOR = #F9F8F8>lambda			virg			</td>
+<td BGCOLOR = #D8D8D8>&ltE&gt</td><td BGCOLOR = #F9F8F8>&lambda;			virg			</td>
 <td BGCOLOR = #F9F8F8>dpontos			fechapar			</td>
 </tr>
 <tr>
@@ -49,83 +49,83 @@
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltC-COMP&gt</td><td BGCOLOR = #F9F8F8>abrech			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			fim-de-arquivo			id			lambda			leia			se			senao			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			fim-de-arquivo			id			leia			se			senao			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltLISTA-COMANDOS&gt</td><td BGCOLOR = #F9F8F8>enquanto			escreva			id			leia			se			</td>
 <td BGCOLOR = #F9F8F8>fechach			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltG&gt</td><td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #D8D8D8>&ltG&gt</td><td BGCOLOR = #F9F8F8>&lambda;			enquanto			escreva			id			leia			se			</td>
 <td BGCOLOR = #F9F8F8>fechach			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltCOMANDOS&gt</td><td BGCOLOR = #F9F8F8>enquanto			escreva			id			leia			se			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltIF&gt</td><td BGCOLOR = #F9F8F8>se			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltH&gt</td><td BGCOLOR = #F9F8F8>lambda			senao			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #D8D8D8>&ltH&gt</td><td BGCOLOR = #F9F8F8>&lambda;			senao			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltWHILE&gt</td><td BGCOLOR = #F9F8F8>enquanto			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltREAD&gt</td><td BGCOLOR = #F9F8F8>leia			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltATRIB&gt</td><td BGCOLOR = #F9F8F8>id			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltWRITE&gt</td><td BGCOLOR = #F9F8F8>escreva			</td>
-<td BGCOLOR = #F9F8F8>enquanto			escreva			id			lambda			leia			se			</td>
+<td BGCOLOR = #F9F8F8>enquanto			escreva			fechach			id			leia			se			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltLIST-W&gt</td><td BGCOLOR = #F9F8F8>abrepar			cadeia			cte			falso			id			opneg			verdadeiro			</td>
 <td BGCOLOR = #F9F8F8>fechapar			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltL&gt</td><td BGCOLOR = #F9F8F8>lambda			virg			</td>
+<td BGCOLOR = #D8D8D8>&ltL&gt</td><td BGCOLOR = #F9F8F8>&lambda;			virg			</td>
 <td BGCOLOR = #F9F8F8>fechapar			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltELEM-W&gt</td><td BGCOLOR = #F9F8F8>abrepar			cadeia			cte			falso			id			opneg			verdadeiro			</td>
-<td BGCOLOR = #F9F8F8>lambda			virg			</td>
+<td BGCOLOR = #F9F8F8>fechapar			virg			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltEXPR&gt</td><td BGCOLOR = #F9F8F8>abrepar			cte			falso			id			opneg			verdadeiro			</td>
-<td BGCOLOR = #F9F8F8>fechapar			lambda			pvirg			virg			</td>
+<td BGCOLOR = #F9F8F8>fechapar			pvirg			virg			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltP&gt</td><td BGCOLOR = #F9F8F8>lambda			oprel			</td>
-<td BGCOLOR = #F9F8F8>fechapar			lambda			pvirg			virg			</td>
+<td BGCOLOR = #D8D8D8>&ltP&gt</td><td BGCOLOR = #F9F8F8>&lambda;			oprel			</td>
+<td BGCOLOR = #F9F8F8>fechapar			pvirg			virg			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltSIMPLES&gt</td><td BGCOLOR = #F9F8F8>abrepar			cte			falso			id			opneg			verdadeiro			</td>
-<td BGCOLOR = #F9F8F8>fechapar			lambda			oprel			pvirg			virg			</td>
+<td BGCOLOR = #F9F8F8>fechapar			oprel			pvirg			virg			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltR&gt</td><td BGCOLOR = #F9F8F8>lambda			opad			</td>
-<td BGCOLOR = #F9F8F8>fechapar			lambda			oprel			pvirg			virg			</td>
+<td BGCOLOR = #D8D8D8>&ltR&gt</td><td BGCOLOR = #F9F8F8>&lambda;			opad			</td>
+<td BGCOLOR = #F9F8F8>fechapar			oprel			pvirg			virg			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltTERMO&gt</td><td BGCOLOR = #F9F8F8>abrepar			cte			falso			id			opneg			verdadeiro			</td>
-<td BGCOLOR = #F9F8F8>lambda			opad			</td>
+<td BGCOLOR = #F9F8F8>fechapar			opad			oprel			pvirg			virg			</td>
 </tr>
 <tr>
-<td BGCOLOR = #D8D8D8>&ltS&gt</td><td BGCOLOR = #F9F8F8>lambda			opmul			</td>
-<td BGCOLOR = #F9F8F8>lambda			opad			</td>
+<td BGCOLOR = #D8D8D8>&ltS&gt</td><td BGCOLOR = #F9F8F8>&lambda;			opmul			</td>
+<td BGCOLOR = #F9F8F8>fechapar			opad			oprel			pvirg			virg			</td>
 </tr>
 <tr>
 <td BGCOLOR = #D8D8D8>&ltFAT&gt</td><td BGCOLOR = #F9F8F8>abrepar			cte			falso			id			opneg			verdadeiro			</td>
-<td BGCOLOR = #F9F8F8>lambda			opmul			</td>
+<td BGCOLOR = #F9F8F8>opad			opmul			</td>
 </tr>
 </table>
 </center><footer  text-align: "center" >
